--- a/views/index.jade
+++ b/views/index.jade
@@ -3,3 +3,10 @@ extends layout
 block content
   h1= title
   p Welcome to #{title}
+
+
+
+  script(src='/socket.io/socket.io.js')
+  script(type='text/javascript')
+    //这边的url真正用时需修改为确切地址
+    var socket = io.connect('http://localhost:3000');
