--- a/views/index.jade
+++ b/views/index.jade
@@ -19,5 +19,11 @@ block content
     var server = io.connect('http://localhost:3000');
     $('#chat_button').click(function() {
       var message = $('#chat_input').val();
-      server.emit('messages', message)
+      server.emit('messages', message);
     });
+    server.on('messages', function(data) {
+      insertMessage(data);
+    });
+    function insertMessage(data){
+      $('div#chat_content').append("<div class='alert'>" + data + "</div>");
+    };
