--- a/views/index.jade
+++ b/views/index.jade
@@ -5,6 +5,9 @@ block content
   .row-fluid
     .span2.well
       h4 在线人员
+      ul
+        li jack
+        li tom
     .span10
       #chat_content.well
         h3 聊天内容
