--- a/views/index.jade
+++ b/views/index.jade
@@ -18,8 +18,7 @@ block content
 
   script(src='/socket.io/socket.io.js')
   script(type='text/javascript')
-    //这边的url真正用时需修改为确切地址
-    var server = io.connect('http://localhost:3000');
+    var server = io.connect('http://' + window.location.hostname + ':3000');
 
     nickname = prompt("What is your nickname?");
     $('#status').html("<div class='alert alert-success'>Connected to chattr</div>");
