--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -1,8 +1,5 @@
     </div>
   </body>
 
-  <script type="text/javascript" src='/javascripts/jquery-1.9.1.min.js'></script>
-  <script type="text/javascript" src='/socket.io/socket.io.js'></script>
-  <script type="text/javascript" src='/javascripts/chat.js'></script>
-
+  <script type="text/javascript" src='/javascripts/jquery.cookie.js'></script>
 </html>
