--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,7 +3,7 @@
 <h2>Real time web chat</h2>
 
 <div class='row-fluid'>
-  <div class='span2 well'>
+  <div id='users-online' class='span2 well'>
     <h4>online</h4>
     <ul>
       <li>jack</li>
@@ -23,5 +23,9 @@
     </div>
   </div>
 </div>
+
+<script type="text/javascript" src='/javascripts/jquery-1.9.1.min.js'></script>
+<script type="text/javascript" src='/socket.io/socket.io.js'></script>
+<script type="text/javascript" src='/javascripts/chat.js'></script>
 
 <% include footer %>
