--- a/views/head.ejs
+++ b/views/head.ejs
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title><%= title %></title>
     <link rel="stylesheet" href="/stylesheets/bootstrap.min.css" />
+    <link rel="stylesheet" href="/stylesheets/chat.css" />
   </head>
 
   <body>
