--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,10 +13,10 @@
     <div id='chat_content' class='well'>
       <h3>chat content</h3>
     </div>
-    <h3 id='username'><%= user %></h3>
+    <div id="sayingto">你好 <span id="from"><%= user %></span> ，你正在对 <span id="to"></span> 说</div>
     <div class='input-append'>
       <input type="text" id='chat_input' class='input-xxlarge' />
-      <button id='chat_button' class='btn'>Send</button>
+      <button id='chat_button' class='btn' type='submit'>Send</button>
     </div>
   </div>
 </div>
