--- a/views/login.ejs
+++ b/views/login.ejs
@@ -21,7 +21,7 @@
 ------->
 
       <div class='form-actions'>
-        <button class="btn btn-primary" type='submit'>login</button>
+        <button class="btn btn-primary" type="submit">login</button>
         <button class="btn btn-warning" type="reset">reset</button>
       </div>
     </fieldset>
