--- a/public/stylesheets/chat.css
+++ b/public/stylesheets/chat.css
@@ -23,16 +23,11 @@
   color: #39F;
 }
 #sayingto{
-  background: #999;
   background: rgba(0,0,0,0.3);
-  position: absolute;
-  left: 5px;
-  right: 105px;
-  bottom: 5px;
   height: 25px;
   line-height: 25px;
   padding: 0 10px;
-  border-bottom-left-radius: 5px;
+  margin-bottom: 10px;
 }
 #from
 {
