remove type=submit

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,7 +16,7 @@
     <div id="sayingto">你好 <span id="from"><%= user %></span> ，你正在对 <span id="to"></span> 说</div>
     <div class='input-append'>
       <input type="text" id='chat_input' class='input-xxlarge' />
-      <button id='chat_button' class='btn' type='submit'>Send</button>
+      <button id='chat_button' class='btn'>Send</button>
     </div>
   </div>
 </div>
