--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,21 +2,23 @@
 
 <h2>Real time web chat</h2>
 
-<div class='row-fluid'>
-  <div id='users_list' class='span2 well'>
+<div class='row'>
+  <div id='users_list' class='col-md-2 well'>
     <h4>online</h4>
     <ul id="list">
     </ul>
   </div>
 
-  <div class='span10'>
+  <div class='col-md-10'>
     <div id='chat_content' class='well'>
       <h3>chat content</h3>
     </div>
     <div id="sayingto">你好 <span id="from"><%= user %></span> ，你正在对 <span id="to"></span> 说</div>
-    <div class='input-append'>
-      <input type="text" id='chat_input' class='input-xxlarge' />
-      <button id='chat_button' class='btn'>Send</button>
+    <div class="input-group">
+      <input type="text" class="form-control" id="chat_input">
+      <span class="input-group-btn">
+        <button class="btn btn-default" type="button" id="chat_button">Send!</button>
+      </span>
     </div>
   </div>
 </div>
